[backend] fix swagger to accept auth header in ui
