# Backend/api/controllers/exam_prep_controller.go
@@ -21,6 +21,7 @@ func NewExamPrepController(examPrepService *services.ExamPrepService) *ExamPrepC
 // @Summary Generate exam preparation material
 // @Description Generate exam preparation material based on the provided topics and prompt
 // @Param generateDTO body dtos.GenerateExamPrepDTO true "Generate exam preparation material criteria"
+// @Param Authorization header string true "Authorization header" default(Bearer )
 // @Tags exam_prep
 // @Accept json
 // @Produce json
