# Backend/application/dtos/exam_prep/generate_exam_prep_dto.go
@@ -1,11 +1,8 @@
 package dtos
 
-import (
-	"time"
-)
 
 type GenerateExamPrepDTO struct {
 	Topics   []string
 	Prompt   string
-	ReadTime time.Duration
+	ReadTime int
 }
