# Backend/docs/swagger.yaml
@@ -26,6 +26,15 @@ definitions:
         type: integer
     type: object
   dtos.GenerateExamPrepDTO:
+    properties:
+      prompt:
+        type: string
+      readTime:
+        type: integer
+      topics:
+        items:
+          type: string
+        type: array
     type: object
   dtos.GenerateExperimentDTO:
     properties:
@@ -138,6 +147,12 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/dtos.GenerateExamPrepDTO'
+      - default: Bearer
+        description: Authorization header
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -158,6 +173,12 @@ paths:
       - application/json
       description: Add a new experiment to the database
       parameters:
+      - default: Bearer
+        description: Authorization header
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: New experiment data
         in: body
         name: addDTO
@@ -187,6 +208,12 @@ paths:
         name: chapterID
         required: true
         type: integer
+      - default: Bearer
+        description: Authorization header
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -198,6 +225,8 @@ paths:
             type: array
         "400":
           description: Bad Request
+      security:
+      - JWT: []
       summary: Get experiments for a chapter
       tags:
       - experiments
@@ -205,6 +234,12 @@ paths:
     get:
       description: Get the content for a specific experiment
       parameters:
+      - default: Bearer
+        description: Authorization header
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Experiment ID
         in: path
         name: experimentID
@@ -228,6 +263,12 @@ paths:
     delete:
       description: Delete an experiment from the database
       parameters:
+      - default: Bearer
+        description: Authorization header
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Experiment ID
         in: path
         name: experimentID
@@ -253,6 +294,12 @@ paths:
       - application/json
       description: Generate experiments for a specific chapter based on provided criteria
       parameters:
+      - default: Bearer
+        description: Authorization header
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Generate experiment criteria
         in: body
         name: generateDTO
@@ -279,6 +326,12 @@ paths:
     get:
       description: Get a list of experiments for a specific subject
       parameters:
+      - default: Bearer
+        description: Authorization header
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Subject ID
         in: path
         name: subjectID
@@ -306,6 +359,12 @@ paths:
       - application/json
       description: Update an existing experiment in the database
       parameters:
+      - default: Bearer
+        description: Authorization header
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Experiment ID
         in: path
         name: experimentID
@@ -337,6 +396,12 @@ paths:
       - application/json
       description: Generate a quiz based on the provided topics and prompt
       parameters:
+      - default: Bearer
+        description: Authorization header
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Generate quiz criteria
         in: body
         name: generateDTO
@@ -365,6 +430,12 @@ paths:
       - application/json
       description: Register a new admin user with the provided information
       parameters:
+      - default: Bearer
+        description: Authorization header
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Admin user registration information
         in: body
         name: user
@@ -389,6 +460,12 @@ paths:
     delete:
       description: Delete a user by ID
       parameters:
+      - default: Bearer
+        description: Authorization header
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User ID
         in: path
         name: id
@@ -454,6 +531,13 @@ paths:
   /users/me:
     get:
       description: Retrieve the profile details of the currently authenticated user
+      parameters:
+      - default: Bearer
+        description: Authorization header
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -496,6 +580,12 @@ paths:
       - application/json
       description: Update the information of the currently authenticated user
       parameters:
+      - default: Bearer
+        description: Authorization header
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User ID
         in: path
         name: id
